force-app/main/default/objects/LLC_BI__Spread_Statement_Record_Value__c/LLC_BI__Spread_Statement_Record_Value__c.object-meta.xml
<CustomObject>
    <label>Spread Statement Record Value</label>
    <nameField>
        <displayFormat>{000000000}</displayFormat>
        <label>Spread Statement Record Value Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Spread Statement Record Values</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>