force-app/main/default/objects/LLC_BI__Spread_Statement_Record_Value__c/fields/LLC_BI__Formula__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Formula__c</fullName>
    <description>This field is used to hold a mathematical formula that will be evaluated on blur of a record value cell.</description>
    <label>Formula</label>
    <length>255</length>
    <type>Text</type>
</CustomField>