force-app/main/default/objects/LLC_BI__Spread_Statement_Record_Value__c/fields/LLC_BI__Spread_Statement_Period__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Spread_Statement_Period__c</fullName>
    <description>This field is required. It is populated automatically whenever a value is calculated for a spread statement record (chart of account) within the spreading applicaton. This field specifies the Spread Statement Period associated with the Spread Statement record total.</description>
    <label>Spread Statement Period</label>
    <referenceTo>LLC_BI__Spread_Statement_Period__c</referenceTo>
    <relationshipLabel>Spread Statement Record Values</relationshipLabel>
    <relationshipName>Spread_Statement_Record_Values</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>